# Simple-Vehicle-Road-Noise-Simulator

./: LICENSE  README.md
SimulinkController/: testExample_R2019b.slx
SoundSimulator/src/: CMakeLists.txt  test1.rc
SoundSimulator/src/cpp/: C06.cpp
